@@ -1,3 +1,5 @@
+* Fuse.debug flag set based on query string parameters in script tag [jddalton, Thomas Fuchs, Mark Caudill]
+
 * Namespace Fuse.Exception added to use Firebug or to throw an exception via the Fuse.debug flag. [FuseJS LH #52] [jddalton, Mark Caudill]
 
 * Rethrow errors when `onException` callbacks are not provided for Fuse.Ajax.Request instances. [Prototype LH #634] [jddalton, Spezi]
